@@ -2,8 +2,6 @@ Release 0.4
 
 ADDITIONAL MATCHERS:
 
-- toBeInstanceOf()
-
 - toBeExtensible()
 - toBeFrozen()
 - toBeSealed()
